exports[`test Child node (mmsvg) 1`] = `
"<div class=\"pe-svg\">
  <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\"
  viewbox=\"0 0 24 24\">
    <path d=
    \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
    </path>
  </svg>
</div>
"
`;

exports[`test Child node (trusted svg) 1`] = `
"<div class=\"pe-svg\">
  <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\"
  viewbox=\"0 0 24 24\">
    <path d=
    \"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\">
    </path>
  </svg>
</div>
"
`;

exports[`test Option: content (mmsvg) 1`] = `
"<div class=\"pe-svg\">
  <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\"
  viewbox=\"0 0 24 24\">
    <path d=
    \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
    </path>
  </svg>
</div>
"
`;

exports[`test Option: content (trusted svg) 1`] = `
"<div class=\"pe-svg\">
  <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\"
  viewbox=\"0 0 24 24\">
    <path d=
    \"M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z\">
    </path>
  </svg>
</div>
"
`;

exports[`test Option: style (color) 1`] = `
"<div style=\"color: rgb(239, 108, 0);\" class=\"pe-svg\">
  <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\"
  viewbox=\"0 0 24 24\">
    <path d=
    \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
    </path>
  </svg>
</div>
"
`;
